--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,15 @@
 }
 
 .text-updater-node {
-  height: 160px;
-  width: max-content;
+  height: max-content;
+  width: 150%;
   border: 1px solid rgb(223, 223, 223);
-  padding: 5px;
   border-radius: 5px;
   background: rgb(223, 223, 223);
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 
 .text-updater-node label {
@@ -67,4 +67,9 @@
 
 #posInput {
   width: 107px;
+}
+
+#head {
+  font-weight: bold;
+  font-size: 18px;
 }
